# Notifications-REDO

./: Dockerfile  README.md  config.json  config.py  handlers.py  logger.py  main.py  methods.py  models.py  pyproject.toml  requirements.txt
app/: config.py  handlers.py  main.py  methods.py  models.py
app/tests/: factories.py  test_models.py
conf-logs-volume/: config.json
