[tool.poetry]
name = "unicc-utility"
version = "0.1.0"
description = ""
authors = ["artsun <parafo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
httpx = "^0.23.0"
email-validator = "^1.2.1"
backoff = "^2.1.2"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
